<package>
  <name>rqt_tf_tree</name>
  <version>0.4.2</version>
  <description>rqt_tf_tree provides a GUI plugin for visualizing the ROS TF frame tree.</description>
  <author>Thibault Kruse</author>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_tf_tree</url>
  <url type="repository">https://github.com/ros-visualization/rqt_robot_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_robot_plugins/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_graph</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>

  <test_depend>python-mock</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
